Closed Bug 1657988 Opened 5 years ago Closed 5 years ago

Can't delete multiple newsgroup messages

Categories

(Thunderbird :: Folder and Message Lists, defect)

defect

Tracking

(thunderbird_esr78+ fixed, thunderbird83 fixed)

VERIFIED FIXED
84 Branch
Tracking Status
thunderbird_esr78 + fixed
thunderbird83 --- fixed

People

(Reporter: walts48, Assigned: mkmelin)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:79.0) Gecko/20100101 Firefox/79.0

Steps to reproduce:

Selected a collapsed post in the m.test newsgroup
Expanded the post to show all threads
Scrolled down to the last post in the thread
Clicked the Shift key to select all threads
Right-click to select "Delete Selected Messages" or click the "Delete" button in the message header.

Actual results:

Only the first message is deleted.

Expected results:

All selected messages should have been deleted.

No errors in the Error Console.

OS: Unspecified → All
Hardware: Unspecified → All

Deleting in a newsgroup means cancelling the post, from the server if the server accepts it, which some don't. If the messages were not from your account not deleting them would be expected.

Why does it work in 68.11.0?

I thought they were deleted from my newsgroup folder in the profile.
I can also delete multiple posts from my a.b.b.pictures newsgroup in TB 68.11.0

Blocks: tb78found

More information.

I went to the Mozilla newsgroup account settings in both 68.11.0 and 78.1.1.
Selected Synchronization & Storage and changed my "To recover disk space, old messages can be permanently deleted" setting from "Don't delete any messages" to "Delete messages more than: 90 days old".
Closed the settings and all messages more than 90 days old were deleted from all groups folders as I selected them in the Folder pane in both versions.

(In reply to Magnus Melin [:mkmelin] from comment #1)

Deleting in a newsgroup means cancelling the post, from the server if the server accepts it, which some don't. If the messages were not from your account not deleting them would be expected.

Not exactly. Cancelling an Article is:
Message -> Cancel Message

"Delete Message" indeed only removes the article from the local view.

I can confirm the bug for current Trunk and that it worked for TB68.11.

Confirming this manifests for me in 78.1.1.

Messages can be (locally) deleted individually, but never in bulk.

When deleting in bulk (multiple selection with shift-click), only the first in the list is deleted.

Is this a bug similar to Bug 1617461?

(In reply to Alfred Peters from comment #7)

Is this a bug similar to Bug 1617461?

Flags: needinfo?(wls220spring)

(In reply to Wayne Mery (:wsmwk) from comment #8)

(In reply to Alfred Peters from comment #7)

Is this a bug similar to Bug 1617461?

It looks to me that it is extension work. I can't test if deleting multiple messages from a newsgroup works in today's Daily due to it crashing every time I select a newsgroup message.

bug 1657493

Odd that it was filed days ago. I'm pretty sure it worked yesterday when I tested that cool new feature.

Flags: needinfo?(wls220spring)

(In reply to Wayne Mery (:wsmwk) from comment #8)

(In reply to Alfred Peters from comment #7)

Is this a bug similar to Bug 1617461?

I didn't mean to suggest that it fixed the bug. It wasn't.
Maybe the solution is similar to there.

I confirm the issue originally reported by WaltS48.

I am running TB under Linux 64-bit and I just upgraded from TB 68.10 to TB 78.3.1. While it is possible to delete all selected threads of a newsgroup by pressing the Delete key in TB 68.10, only one message of a selected thread is deleted in TB 78.3.1.

Regards
Tom

I can also confirm this issue in Thunderbird 78.3.2 (64 bit) running on Windows 7.
I first noticed it when running Message Filters to try and remove newsgroup messages from trolls and haters.
I run the filter manually but only one message gets deleted!

I then use quick filter to find them all, select them all and right click and choose delete selected messages - but only one message gets deleted!!

FFS why is it taking so long to fix this that was apparently first reported two months ago!!

(In reply to Brian Gregory from comment #12)

FFS why is it taking so long to fix this that was apparently first reported two months ago!!

Comments like this aren't helpful. It might have something to do with https://www.bizjournals.com/sanjose/news/2020/08/11/mozilla-restructures-lays-off-250.html

TB is not Mozilla's flagship product and has only recently had some bodies thrown at it to fix outstanding bugs and move development along. In 2012 (https://www.cnet.com/news/mozillas-thunderbird-not-dead-but-sort-of-on-life-support/), TB was put on "life support" as Mozilla focused on Firefox and other endeavors. It's only been in the past 6-9 months that TB has gotten some development love.

But in those 8 years since active development slowed / stopped, a LOT of bugs were outstanding and had to be addressed before TB could be in the state it is in presently. Bringing things up to 2020 standards has had it's challenges as can be see by this issue that's cropped up.

If you had a version that >was< running fine for you, you can always downgrade back to it using the "TB-version-installfile.exe –allow-downgrade" but ensure you're using ESR. Also ensure you set auto update to "Check for Updates, but let me choose..." so it doesn't just revert back to 78.3.2.

I did some investigating over the weekend (not mozregression) and found that deleting threaded messages last worked in version 76.0b3, and didn't work starting with version 77.0b1.

(In reply to WaltS48 [:walts48] from comment #15)

I did some investigating over the weekend (not mozregression) and found that deleting threaded messages last worked in version 76.0b3, and didn't work starting with version 77.0b1.

https://hg.mozilla.org/releases/comm-beta/pushloghtml?fromchange=THUNDERBIRD_76_0b3_RELEASE&tochange=THUNDERBIRD_77_0b1_RELEASE covers a lot of territory. But perhaps bug 1612244 or bug 1612239 are likely?

Flags: needinfo?(benc)

What is Flags: needinfo?(benc@thunderbird.net)
Is benc@thunderbird.net just too lazy to say what he wants to know?

What is Flags: needinfo?(benc@thunderbird.net)

It is someone else (in this case me) raising a hand to ask a question.

Is benc@thunderbird.net just too lazy to say what he wants to know?

Please be respectful in your comments.

Severity: -- → S3

Hmm, I'm trying to replicate this, but I'm running into an ASSERT when it tries to display news messages (seems something similar to Bug 1661955 - to do with the NNTP nsIChannel implementation). Need to sort that out first, but yes, I think the nsIArray-removal work is probably a good candidate for causing the regression...

Regressed by: 1612244
Assignee: nobody → mkmelin+mozilla
Flags: needinfo?(benc)
Regressed by: 1612239
No longer regressed by: 1612244

Also using MsgHdrsToTArray to sync up with what's used in other ::DeleteMessages impls

Attachment #9183398 - Flags: review?(benc)
Status: NEW → ASSIGNED
Target Milestone: --- → 84 Branch
Comment on attachment 9183398 [details] [diff] [review] bug1657988_nntp_multidel.patch Review of attachment 9183398 [details] [diff] [review]: ----------------------------------------------------------------- Yes! That inverted NS_FAILED() looks like the culprit to me (Doh!).
Attachment #9183398 - Flags: review?(benc) → review+

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/071e048abf17
fix regression where multiple nntp messages couldn't be deleted at once. r=benc

Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED

This is good news.
So when will/did this fix reach a normal ESR release version?

Probably 78.5.

Comment on attachment 9183398 [details] [diff] [review]
bug1657988_nntp_multidel.patch

[Approval Request Comment]
Regression caused by (bug #): bug 1612239
User impact if declined: can't delete multiple nntp messages at once
Testing completed (on c-c, etc.): working on trunk
Risk to taking this patch (and alternatives if risky): safe, basically on char change

Attachment #9183398 - Flags: approval-comm-esr78?
Attachment #9183398 - Flags: approval-comm-beta?

Comment on attachment 9183398 [details] [diff] [review]
bug1657988_nntp_multidel.patch

[Triage Comment]
Approved for beta

Attachment #9183398 - Flags: approval-comm-beta? → approval-comm-beta+

Working again in my test of the 83.0b2 release candidate on Windows 10.

Comment on attachment 9183398 [details] [diff] [review]
bug1657988_nntp_multidel.patch

[Triage Comment]
Approved for esr78

Attachment #9183398 - Flags: approval-comm-esr78? → approval-comm-esr78+

Tested in the 78.4.1 release candidate on Windows 10. SUCCESS.

Yes. Seems to be fixed in release 78.4.1
Thank you to everyone who worked towards getting this fixed.
You're all stars.

(In reply to Brian Gregory from comment #34)

Yes. Seems to be fixed in release 78.4.1
Thank you to everyone who worked towards getting this fixed.
You're all stars.

Thanks for confirming. Do report any more bugs if you find them.

Confirmed. The issue is fixed in 78.4.1 under Linux 64bit.
Thanks a lot.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: