Bug 1657988 - fix regression where multiple nntp messages couldn't be deleted at once. r=benc